--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kicktipp Matches</title>
+    <title>Kicktipp Auswertung</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
     <header>
-        <h1>Kicktipp Matches</h1>
+        <h1>Kicktipp Auswertung</h1>
         <nav>
             {% block navigation %}{% endblock %}
             <li class="nav-item">
